@@ -11,6 +11,9 @@ mountall (2.12) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Fix typo in "Press C" message.
 
+  [ Alberto Milone ]
+  * Pass a localised string to plymouth in plymouth_progress (LP: #553954).
+
  -- Scott James Remnant <scott@ubuntu.com>  Tue, 13 Apr 2010 17:36:43 -0700
 
 mountall (2.11) lucid; urgency=low
